sdk_tests/tests/read-write-macro-fail/read_write_only_support_enum_and_struct.rs
#![no_main]
use read_write_state_derive::ReadWriteState;

#[derive(ReadWriteState)]
union MyUnion {
    f1: u32,
    f2: u32,
}